funding gap fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,8 +75,7 @@ h2 {
 }
 
 .flip-card {
-  perspective: 1000px;
-  width: 300px;
+  width: 100%;
   height: 250px;
   position: relative;
   transform-style: preserve-3d;
